--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,9 @@ npm-debug.log
 bower_components
 src/js/browser-bundle.js
 src/js/browser-bundle.js.map
+public/css/main.css
+public/css/main.css.map
+public/js/bundle.js
+public/js/bundle.js.map
+public/index.html
 .idea
