--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.19.0",
     "karma": "^1.1.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.1.1",
     "mocha": "^2.5.3",
