--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "karma": "^1.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
