--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,12 @@
   "presets": [
     "es2015",
     "react"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        ["__coverage__", { "ignore": "*.test.*" }]
+      ]
+    }
+  }
 }
