--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
   "env": {
     "test": {
       "plugins": [
-        ["__coverage__", { "ignore": "*.test.*" }]
+        ["__coverage__", { "ignore": "*.+(test|stub).*" }]
       ]
     }
   }
