Add npm scripts to prepare public directory before build and start
* Add cpy-cli and rimraf modules
* Add various clean / copy / create directories npm scripts
* Add prebuild and prestart npm scripts
* Add test css file
* Update webpack config filename

--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm run clean-and-copy",
     "start": "webpack-dev-server --config webpack.config.js --content-base public",
+    "prebuild": "npm run clean-and-copy",
     "build": "webpack --config webpack.config.prod.js -p",
+    "copy-css": "cpy src/styles/*.css public/styles",
+    "copy-favicon": "cpy src/favicon.ico public",
+    "copy-files": "npm run copy-css && npm run copy-favicon",
+    "clean-and-copy": "npm run clean-public && npm run create-dirs && npm run copy-files",
+    "clean-public": "rimraf public",
+    "create-dirs": "mkdir -p public/{js,styles}",
     "test": "karma start",
     "validate": "npm-run-all --parallel validate-webpack:* test",
     "validate-webpack:dev": "webpack-validator webpack.config.js",
@@ -27,6 +35,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "chai": "^3.5.0",
+    "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.19.0",
     "karma": "^1.1.0",
@@ -38,6 +47,7 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "npm-run-all": "^2.2.2",
+    "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
