Add flux app images and css
* Add images
* Add css
* Add npm script to copy files to public folder

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build": "webpack --config webpack.config.prod.js -p",
     "copy-css": "cpy src/styles/*.css public/styles",
     "copy-favicon": "cpy src/favicon.ico public",
-    "copy-files": "npm run copy-css && npm run copy-favicon",
+    "copy-images": "cpy src/img/* public/img",
+    "copy-files": "npm run copy-css && npm run copy-favicon && npm run copy-images",
     "clean-and-copy": "npm run clean-public && npm run create-dirs && npm run copy-files",
     "clean-public": "rimraf public",
-    "create-dirs": "mkdir -p public/{js,styles}",
+    "create-dirs": "mkdir -p public/{img,js,styles}",
     "test": "karma start",
     "validate": "npm-run-all --parallel validate-webpack:* test",
     "validate-webpack:dev": "webpack-validator webpack.config.js",
