--- a/package.json
+++ b/package.json
@@ -26,19 +26,22 @@
   "license": "MIT",
   "dependencies": {
     "path": "^0.12.7",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^11.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "html-webpack-plugin": "^2.19.0",
+    "jsdom": "^9.3.0",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
@@ -48,8 +51,10 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "npm-run-all": "^2.2.2",
+    "react-addons-test-utils": "^15.1.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
+    "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1",
