--- a/package.json
+++ b/package.json
@@ -3,24 +3,6 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "prestart": "npm run clean-and-copy",
-    "start": "webpack-dev-server --config webpack.config.js --content-base public",
-    "prebuild": "npm run clean-and-copy",
-    "build": "webpack --config webpack.config.prod.js -p",
-    "copy-css": "cpy src/styles/*.css public/styles",
-    "copy-favicon": "cpy src/favicon.ico public",
-    "copy-images": "cpy src/img/* public/img",
-    "copy-files": "npm run copy-css && npm run copy-favicon && npm run copy-images",
-    "clean-and-copy": "npm run clean-public && npm run create-dirs && npm run copy-files",
-    "clean-public": "rimraf public",
-    "create-dirs": "mkdir -p public/{img,js,styles}",
-    "test": "karma start",
-    "validate": "npm-run-all --parallel validate-webpack:* test",
-    "validate-webpack:dev": "webpack-validator webpack.config.js",
-    "validate-webpack:prod": "webpack-validator webpack.config.prod.js",
-    "watch:test": "npm test -- --auto-watch --no-single-run"
-  },
   "author": "",
   "private": false,
   "license": "MIT",
@@ -39,6 +21,7 @@
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
+    "ghooks": "^1.2.4",
     "html-webpack-plugin": "^2.19.0",
     "jsdom": "^9.3.0",
     "json-loader": "^0.5.4",
@@ -51,6 +34,7 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "npm-run-all": "^2.2.2",
+    "opt-cli": "^1.5.1",
     "react-addons-test-utils": "^15.1.0",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
@@ -59,5 +43,28 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1",
     "webpack-validator": "^2.2.0"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "opt --in pre-commit --exec \"npm run validate\""
+    }
+  },
+  "scripts": {
+    "prestart": "npm run clean-and-copy",
+    "start": "webpack-dev-server --config webpack.config.js --content-base public",
+    "prebuild": "npm run clean-and-copy",
+    "build": "webpack --config webpack.config.prod.js -p",
+    "copy-css": "cpy src/styles/*.css public/styles",
+    "copy-favicon": "cpy src/favicon.ico public",
+    "copy-images": "cpy src/img/* public/img",
+    "copy-files": "npm run copy-css && npm run copy-favicon && npm run copy-images",
+    "clean-and-copy": "npm run clean-public && npm run create-dirs && npm run copy-files",
+    "clean-public": "rimraf public",
+    "create-dirs": "mkdir -p public/{img,js,styles}",
+    "test": "karma start",
+    "validate": "npm-run-all --parallel validate-webpack:* test",
+    "validate-webpack:dev": "webpack-validator webpack.config.js",
+    "validate-webpack:prod": "webpack-validator webpack.config.prod.js",
+    "watch:test": "npm test -- --auto-watch --no-single-run"
   }
 }
