--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-preset-es2015": "^6.9.0",
@@ -21,6 +22,13 @@
     "cpy-cli": "^1.0.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
+    "eslint": "^2.13.1",
+    "eslint-config-kentcdodds": "^6.2.1",
+    "eslint-import-resolver-webpack": "^0.3.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-mocha": "^3.0.0",
+    "eslint-plugin-react": "^5.2.2",
+    "fluxxor": "^1.7.3",
     "ghooks": "^1.2.4",
     "html-webpack-plugin": "^2.19.0",
     "jsdom": "^9.3.0",
@@ -62,7 +70,8 @@
     "clean-public": "rimraf public",
     "create-dirs": "mkdir -p public/{img,js,styles}",
     "test": "karma start",
-    "validate": "npm-run-all --parallel validate-webpack:* test",
+    "lint": "eslint .",
+    "validate": "npm-run-all --parallel validate-webpack:* lint test",
     "validate-webpack:dev": "webpack-validator webpack.config.js",
     "validate-webpack:prod": "webpack-validator webpack.config.prod.js",
     "watch:test": "npm test -- --auto-watch --no-single-run"
