Group vendor files for production build
* Add build:prod and prebuild:prod scripts

* Update prod webpack config to have 2 entry points

* Update prod webpack config output filename to use [name]

* Add config for CommonsChunkPlugin to bundle vendor files separately

* Update features list in README.md

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "prestart": "npm run clean-and-copy",
     "start": "webpack-dev-server --config webpack.config.js --content-base public",
     "prebuild": "npm run clean-and-copy",
-    "build": "webpack --config webpack.config.prod.js -p",
+    "prebuild:prod": "npm run clean-and-copy",
+    "build": "webpack --config webpack.config.js -p",
+    "build:prod": "webpack --config webpack.config.prod.js -p",
     "copy-css": "cpy src/styles/*.css public/styles",
     "copy-favicon": "cpy src/favicon.ico public",
     "copy-images": "cpy src/img/* public/img",
