--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "if-env": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
@@ -59,7 +62,9 @@
   },
   "scripts": {
     "prestart": "npm run clean-and-copy",
-    "start": "webpack-dev-server --config webpack.config.js --content-base public",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "webpack-dev-server --config webpack.config.js --inline --content-base public --history-api-fallback",
+    "start:prod": "npm run build:prod && node server.js",
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
     "build": "webpack --config webpack.config.js -p",
