Use webpack to build a server bundle
* Add npm build:client and build:server scripts

* Update npm build script

* Add  server.bundle.js to .gitignore and .eslintignore

* Add webpack.server.config.js

--- a/package.json
+++ b/package.json
@@ -63,12 +63,13 @@
   "scripts": {
     "prestart": "npm run clean-and-copy",
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack.config.js --inline --content-base public --history-api-fallback",
-    "start:prod": "npm run build:prod && node server.js",
+    "start:dev": "webpack-dev-server --config webpack.config.js --inline --content-base public/ --history-api-fallback",
+    "start:prod": "npm run build && node server.bundle.js",
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
-    "build": "webpack --config webpack.config.js -p",
-    "build:prod": "webpack --config webpack.config.prod.js -p",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "webpack --config webpack.config.prod.js -p",
+    "build:server": "webpack --config webpack.server.config.js",
     "copy-css": "cpy src/styles/*.css public/styles",
     "copy-favicon": "cpy src/favicon.ico public",
     "copy-images": "cpy src/img/* public/img",
