Update npm lint script so that all javascript files are linted
Needed because jsx files weren't being linted.

* Add npm lint:src and lint:. scripts

* Update npm lint script

* Various fixes to .jsx files so they pass linting

--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "clean-public": "rimraf public",
     "create-dirs": "mkdir -p public/{img,js,styles}",
     "test": "karma start",
-    "lint": "eslint .",
+    "lint": "npm run lint:src && npm run lint:.",
+    "lint:src": "eslint src/**/*.jsx src/**/*.js",
+    "lint:.": "eslint . --ignore-pattern src",
     "validate": "npm-run-all --parallel validate-webpack:* lint test",
     "validate-webpack:dev": "webpack-validator webpack.config.js",
     "validate-webpack:prod": "webpack-validator webpack.config.prod.js",
