Server-side rendering on page load
* Move loaded data to an object literal

* Add Router to app.js

* Add routes.js with single / route

* Move server.js to ./src/js

* Update server.js
  - Add flux creation
  - Update app.get definition to use renderToString and createElement to render the page
  - Deal with error cases

* Update index.ejs to have doctype declaration

* Install react-router

* Add npm clean-server script to delete the server.bundle.js

* Update clean-and-copy to use npm run clean-server

* Remove HtmlWebpackPlugin usage from prod webpack config

* Update server webpack config to use relative path to be consistent with other configs

* Update README.md features list

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "if-env": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-router": "^2.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -74,8 +75,9 @@
     "copy-favicon": "cpy src/favicon.ico public",
     "copy-images": "cpy src/img/* public/img",
     "copy-files": "npm run copy-css && npm run copy-favicon && npm run copy-images",
-    "clean-and-copy": "npm run clean-public && npm run create-dirs && npm run copy-files",
+    "clean-and-copy": "npm run clean-public && npm run clean-server && npm run create-dirs && npm run copy-files",
     "clean-public": "rimraf public",
+    "clean-server": "rimraf server.bundle.js",
     "create-dirs": "mkdir -p public/{img,js,styles}",
     "test": "karma start",
     "lint": "npm run lint:src && npm run lint:.",
