--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "webpack --config webpack.config.prod.js -p",
+    "build:client": "webpack --config webpack.config.prod.js",
     "build:server": "webpack --config webpack.server.config.js",
     "copy-css": "cpy src/styles/*.css public/styles",
     "copy-favicon": "cpy src/favicon.ico public",
